--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "Roboto";
+  font-family: 'Roboto', sans-serif;
   color: #fff;
   text-transform: uppercase;
   transition: .5s;
