--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 }
 
 body {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   color: #fff;
   text-transform: uppercase;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .container {
@@ -90,12 +90,12 @@ body {
     gap: 0.625rem;
   }
 
-
   .text-bills {
     margin: 2.188rem;
   }
 
-  #account-name,  #expiration  {
+  #account-name,
+  #expiration {
     margin-right: 0 !important;
   }
 
@@ -105,9 +105,9 @@ body {
   }
 
   .item-bills {
-   max-width: 24rem;
-   font-size: 0.79rem;
-   margin-bottom: 1rem;
+    max-width: 24rem;
+    font-size: 0.79rem;
+    margin-bottom: 1rem;
   }
 
   .account1 {
@@ -122,11 +122,10 @@ body {
   gap: 10px;
 }
 
-
 .item-bills {
   list-style: none;
   width: 42rem;
-  background: #84899B;
+  background: #84899b;
   border-radius: 20px;
   padding: 10px;
   box-sizing: border-box;
@@ -145,7 +144,7 @@ body {
   width: 25px;
   height: 25px;
   border-radius: 20px;
-  background: #84899B;
+  background: #84899b;
   cursor: pointer;
   border: none;
 }
@@ -160,8 +159,6 @@ body {
   align-items: center;
 }
 
-
-
 .account {
   display: flex;
   align-items: center;
@@ -172,7 +169,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .account-item-value {
@@ -212,10 +208,9 @@ body {
   height: 35px;
 }
 
+/* theme switcher */
 
- /* theme switcher */
-
- * {
+* {
   padding: 0;
   margin: 0;
 }
@@ -234,7 +229,6 @@ body {
   margin-right: 1rem;
   right: 0px;
 }
-
 
 .toggle-theme {
   display: flex;
@@ -256,28 +250,27 @@ body {
 }
 
 .btn-theme.dark {
-  animation: right .5s forwards;
+  animation: right 0.5s forwards;
 }
 
 .btn-theme.light {
-  animation: left .5s forwards;
-
+  animation: left 0.5s forwards;
 }
 
- @keyframes right {
+@keyframes right {
   from {
     transform: translateX(0%);
   }
   to {
-    transform: translateX(150%)
+    transform: translateX(150%);
   }
 }
 
 @keyframes left {
   from {
-    transform: translateX(150%)
+    transform: translateX(150%);
   }
   to {
-    transform: translateX(0%)
+    transform: translateX(0%);
   }
 }
